--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,12 +1,13 @@
 version: '3.3'
 services:
 
-  frontend:
+  backend:
     build:
-      context: ../frontend
+      context: ../backend
       dockerfile: Dockerfile
-    volumes:
-      - ../frontend/:/app/result_build/
+    env_file:
+      - ./.env
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -15,3 +16,6 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+
+    depends_on:
+      - backend
