--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,20 @@
 server {
     listen 80;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+        proxy_pass http://backend:8000;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000;
+    }
+
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -17,5 +28,4 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
 }
