--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,12 +1,24 @@
 version: '3.3'
 services:
 
+  #db:
+   # image: postgres:13.0-alpine
+    #volumes:
+     # - /var/lib/postgresql/data/
+    #env_file:
+     # - ./.env # TODO включить перед продом
+
   backend:
     build:
       context: ../backend
       dockerfile: Dockerfile
+    restart: always
+    #volumes:
+    #  - static_admin:/app/static/
     env_file:
       - ./.env
+    #depends_on:
+    #  - db
 
   nginx:
     image: nginx:1.19.3
