--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -13,8 +13,9 @@ services:
       context: ../backend
       dockerfile: Dockerfile
     restart: always
-    #volumes:
-    #  - static_admin:/app/static/
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
     env_file:
       - ./.env
     #depends_on:
@@ -28,6 +29,12 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
     depends_on:
       - backend
+
+
+volumes:
+  static_value:
+  media_value:
