--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,25 +1,23 @@
 version: '3.3'
 services:
 
-  #db:
-   # image: postgres:13.0-alpine
-    #volumes:
-     # - /var/lib/postgresql/data/
-    #env_file:
-     # - ./.env # TODO включить перед продом
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - /var/lib/postgresql/data/
+    env_file:
+      - ./.env
 
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    image: julka3561/foodgram_backend:v1.0
     restart: always
     volumes:
-      - static_value:/app/static/
+      - static_value:/app/staticfiles/
       - media_value:/app/media/
     env_file:
       - ./.env
-    #depends_on:
-    #  - db
+    depends_on:
+      - db
 
   nginx:
     image: nginx:1.19.3
