--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ MANIFEST
 
 # Installer logs
 pip-log.txt
-pip-delete-this-directory.txt
+pip-delete-this-directory.txtf
 
 # Unit test / coverage reports
 htmlcov/
@@ -134,4 +134,5 @@ dmypy.json
 # .vscode
 .vscode
 
-.isort.cfg
+# media
+backend/foodgram/media
