--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - db_value:/var/lib/postgresql/data/
+      - /var/lib/postgresql/data/
     env_file:
       - ./.env
 
@@ -36,4 +36,3 @@ services:
 volumes:
   static_value:
   media_value:
-  db_value:
