--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
+            cd foodgram-project-react/infra
             sudo docker-compose stop
             sudo docker-compose rm web
             sudo docker pull julka3561/foodgram_backend:latest
