--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
           script: |
             cd foodgram-project-react/infra
             sudo docker-compose stop
-            sudo docker-compose rm web
+            sudo docker-compose rm backend
             sudo docker pull julka3561/foodgram_backend:latest
             sudo docker-compose up -d
             sudo docker-compose exec -T web python manage.py migrate
